--- a/package.json
+++ b/package.json
@@ -4,5 +4,22 @@
   "main": "index.js",
   "repository": "https://github.com/TraiderSu/backend_boiler.git",
   "author": "Albert Zamaldinov",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "dev": "env $(cat .env) nodemon --exec babel-node src/index.js"
+  },
+  "dependencies": {
+    "express": "4.17.1"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/node": "^7.4.5",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-syntax-export-namespace-from": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/runtime": "^7.4.5"
+  }
 }
