--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "dev": "env $(cat .env) nodemon --exec babel-node src/index.js"
   },
   "dependencies": {
-    "config": "^3.1.0",
+    "config": "3.1.0",
     "express": "4.17.1",
+    "joi": "14.3.1",
     "knex": "0.17.3",
-    "pg": "^7.11.0"
+    "pg": "7.11.0"
   },
   "devDependencies": {
     "@babel/cli": "7.4.4",
