--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "4.17.1",
     "joi": "14.3.1",
     "knex": "0.17.3",
+    "lodash": "4.17.11",
     "pg": "7.11.0"
   },
   "devDependencies": {
@@ -25,6 +26,8 @@
     "@babel/plugin-transform-runtime": "7.4.4",
     "@babel/preset-env": "7.4.5",
     "@babel/runtime": "7.4.5",
-    "prettier": "1.17.1"
+    "prettier": "1.17.1",
+    "swagger-jsdoc": "3.2.9",
+    "swagger-ui-express": "4.0.6"
   }
 }
