--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "dev": "env $(cat .env) nodemon --exec babel-node src/index.js"
   },
   "dependencies": {
+    "bcryptjs": "2.4.3",
     "config": "3.1.0",
+    "cookie-parser": "1.4.4",
     "express": "4.17.1",
     "joi": "14.3.1",
+    "jsonwebtoken": "8.5.1",
     "knex": "0.17.3",
     "lodash": "4.17.11",
     "pg": "7.11.0"
